--- a/css/main.css
+++ b/css/main.css
@@ -5,28 +5,39 @@ a {
 body {
   font-family: Helvetica, Arial, sans-serif;
 }
+html {
+  box-shadow: 0 0 0 30px #000 inset;
+  padding: 0 30px;
+}
 h1 {
   font-size: 7vw;
   margin-top: 0;
 }
-h2 + p {
+h2 ~ p {
   font-size: 0.8em;
   font-style: italic;
   margin: 1em auto 0;
   max-width: 70%;
   text-align: center;
 }
+h3 + p {
+  padding-bottom: 25px;
+}
 
 /* HEADER STYLES */
 .header {
   background-color: #000;
   color: #fff;
+  position: fixed;
+  width: 100%;
+  z-index: 20;
 }
 .header-logo {
   background: #000;
   box-sizing: border-box;
   display: block;
   height: 10vh;
+  left: -30px;
   padding-top: 10px;
   position: relative;
   text-align: center;
@@ -45,13 +56,15 @@ h2 + p {
 }
 .header-nav a {
   color: #fff;
+}
+.nav-links a {
   font-size: 0.8rem;
   font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
 }
-.header-nav a:hover,
-.header-nav a:active {
+.nav-links a:hover,
+.nav-links a:active {
   color: #ed6e2f;
 }
 .header-nav > li {
@@ -67,6 +80,31 @@ h2 + p {
 }
 .header-nav > li:first-child a:hover {
   color: #fff;
+}
+
+/* FOOTER STYLES */
+.footer {
+  background-color: #000;
+  padding: 3vh 0 3vh;
+  text-align: center;
+}
+.footer-logo img {
+  width: 50px;
+}
+.footer h3 {
+  color: #fff;
+  padding-top: 1.5em;
+  text-transform: uppercase;
+}
+.footer h3 span {
+  color: #aaa;
+}
+.footer-nav a {
+  color: #ccc;
+}
+.footer-nav li {
+  display: inline-block;
+  margin: 2em 1em 0;
 }
 
 /* HERO STYLES */
