--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     <ul class="footer-nav nav-links">
       {% include nav-links.html %}
     </ul>
-    <ul class="social-list footer-social-list">
+    <ul class="social-list footer-social">
       {% include social-links.html %}
     </ul>
   </nav>
