--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Test Page: Don't Panic</title>
-  <link rel="stylesheet" href="/styling_website/css/reset.css" />
-  <link rel="stylesheet" href="/styling_website/css/main.css" />
+  <link rel="stylesheet" href="/css/reset.css" />
+  <link rel="stylesheet" href="/css/main.css" />
 </head>
