--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  {% if page.title %}
+  <title>{{ page.title }} | Test Page</title>
+  {% else %}
   <title>Test Page: Don't Panic</title>
+  {% endif %} {% if page.description %}
+  <meta name="description" content="{{ page.description }}" />
+  {% else %}
+  <meta name="description" content="This is a dangerous site." />
+  {% endif %}
   <link rel="stylesheet" href="/css/reset.css" />
+  <link rel="icon" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link
     rel="stylesheet"
